--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
         webvisor: true
       });
     </script>
-
+  <script type="text/javascript" src="https://widget.cdek.ru/widget/widjet.js" id="ISDEKscript" ></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
